Tested find and post
